--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
 .App {
   text-align: center;
   padding: 20px;
+  height: "100%";
+  width: "100%";
+}
+
+#header {
+  padding: 20px;
+  position: static;
+  width: "100%";
+  height: 20vh;
+  background-color: #a3d9f7;
+  border: 1px solid #a3d9f7;
+  align-items: center;
+  justify-content: center;
+}
+#sidebar_row {
+  margin: 0 auto;
+  padding-top: 15px;
+  cursor: pointer;
+}
+#sidebar {
+  padding-top: 100px;
+  background-color: #a3d9f7;
+  position: static;
+  width: 15vw;
+  height: 70vh;
+  border: 1px solid #a3d9f7;
 }
